test/interop/C/errorMessage/errorInArgNMismatch.good
errorInArgNMismatch.chpl:3: error: Argument number mismatch in export proc
